--- a/sys_conf.yml
+++ b/sys_conf.yml
@@ -5,8 +5,8 @@ sound_device:
 delay_th: 120
 mirror: 0
 company_name: 'Ali Test'
-os: 'windows'
-version: '5.1.3.W_A'
+os: 'linux'
+version: '5.1.0.W_A'
 dated: '10/09/2024 @ 10:34 PM'
 running_mode : 'TRY' # if you have to run try.py make it "TRY" else "PRO"
 auto_unpause: True # its value should be True or False to make auto pause/unpause ; Pleae check the spelling and case; it should be exactly that I specified
