--- a/sys_conf.yml
+++ b/sys_conf.yml
@@ -6,8 +6,8 @@ delay_th: 120
 mirror: 0
 company_name: 'Ali Test'
 os: 'linux'
-version: '5.1.5.L_A'
-dated: '20/09/2024 @ 11:30 PM'
+version: '5.1.6.L_A'
+dated: '25/09/2024 @ 12:00 AM'
 running_mode : 'PRO' # if you have to run try.py make it "TRY" else "PRO"
 auto_unpause: True # its value should be True or False to make auto pause/unpause ; Pleae check the spelling and case; it should be exactly that I specified
 chrome_driver: ''
